# allocation_o2

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  test_install.py
allocation_o2/: __main__.py
examples/: README.md  random_weight_example.py  random_weight_strategy.rs  strategy_template.rs
python_frontend/: pyproject.toml
python_frontend/allocation_o2/: __init__.py  allocator_factory.py
rust_backend/: Cargo.toml
rust_backend/src/: allocation.rs  lib.rs
rust_backend/src/allocation/: macros.rs  mod.rs  py_bindings.rs  strategies.rs  traits.rs
