[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-rust>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allocation_o2"
version = "0.1.0"
description = "Tactical asset allocation with Rust backend"
authors = [
    {name = "Vlad Kochetov", email = "vladkoch@knu.ua"}
]
requires-python = ">=3.8"
keywords = ["finance", "asset allocation", "portfolio optimization"]
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[tool.setuptools]
packages = ["allocation_o2"]
zip-safe = false
include-package-data = true

[tool.setuptools-rust]
rust-extensions = [
    {path = "../rust_backend/Cargo.toml", binding = "PyO3", module = "allocation_o2.allocation_o2"}
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 