[package]
name = "allocation_o2"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Kochetov <vladkoch@knu.ua>"]
description = "Tactical asset allocation backend in Rust"

[lib]
name = "allocation_o2"
# "cdylib" is necessary for Python bindings
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.18.1"