[package]
name = "allocation_o2"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Kochetov <vladkoch@knu.ua>"]
description = "Tactical asset allocation backend in Rust"

[lib]
name = "allocation_o2"
# "cdylib" is necessary for Python bindings
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[dev-dependencies]
rstest = "0.18.1"

[[example]]
name = "random_weight_strategy"
path = "../examples/random_weight_strategy.rs"
crate-type = ["cdylib"]